--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "source-map-support": "^0.5.12"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.7.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "electron": "5.0.6",
     "electron-builder": "^21.0.11",
     "electron-webpack": "^2.7.4",
+    "electron-webpack-ts": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "typescript": "^3.7.2",
     "webpack": "~4.35.3"
   }
 }
